--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
+		},
+		"android": {"package": "onkotunneliauki"},
     "description": ""
   }
 }
